--- a/package.json
+++ b/package.json
@@ -13,19 +13,30 @@
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@types/react-redux": "^7.1.33",
     "babel-plugin-module-resolver": "^5.0.0",
     "expo": "~50.0.7",
+    "expo-blur": "~12.4.1",
     "expo-dev-client": "~3.3.8",
+    "expo-image": "~1.3.5",
+    "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-native": "0.73.2",
     "react-native-date-picker": "^5.0.0",
+    "react-native-paper": "^4.12.6",
+    "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
     "react-native-svg-transformer": "^1.3.0",
+    "react-redux": "^9.0.4",
+    "redux-persist": "^6.0.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
