--- a/package.json
+++ b/package.json
@@ -22,19 +22,22 @@
     "expo-dev-client": "~3.3.8",
     "expo-image": "~1.3.5",
     "expo-secure-store": "~12.3.1",
+    "expo-speech": "~11.7.0",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-native": "0.73.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^5.0.0",
     "react-native-paper": "^4.12.6",
-    "react-native-reanimated": "^3.12.0",
+    "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "^15.4.0",
     "react-native-svg-transformer": "^1.3.0",
+    "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.0.4",
     "redux-persist": "^6.0.0",
     "yup": "^1.3.3"
@@ -44,6 +47,7 @@
     "@tsconfig/react-native": "^3.0.3",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.52",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "typescript": "^5.3.3"
   },
