--- a/eas.json
+++ b/eas.json
@@ -6,7 +6,22 @@
       "ios": {
         "simulator": true
       }
+    },
+    "preview": {
+      "android": {
+        "buildType": "apk"
+      }
+    },
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      }
+    },
+    "preview3": {
+      "developmentClient": true
+    },
+    "preview4": {
+      "distribution": "internal"
     }
   }
 }
-
