--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
     "@hookform/resolvers": "^3.3.4",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
@@ -27,6 +29,7 @@
     "expo-status-bar": "~1.11.1",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-native": "0.73.2",
     "react-native-chart-kit": "^6.12.0",
@@ -37,7 +40,10 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^15.4.0",
     "react-native-svg-transformer": "^1.3.0",
+    "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-voice": "^0.3.0",
+    "react-native-web": "~0.19.6",
     "react-redux": "^9.0.4",
     "redux-persist": "^6.0.0",
     "yup": "^1.3.3"
@@ -47,6 +53,7 @@
     "@tsconfig/react-native": "^3.0.3",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.52",
+    "@types/react-dom": "^18",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "typescript": "^5.3.3"
