--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "@types/react-redux": "^7.1.33",
     "babel-plugin-module-resolver": "^5.0.0",
     "expo": "~50.0.7",
-    "expo-blur": "~12.4.1",
+    "expo-blur": "~12.9.2",
     "expo-dev-client": "~3.3.8",
-    "expo-image": "~1.3.5",
-    "expo-secure-store": "~12.3.1",
+    "expo-image": "~1.10.6",
+    "expo-secure-store": "~12.8.1",
     "expo-speech": "~11.7.0",
-    "expo-splash-screen": "~0.26.4",
+    "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
@@ -34,6 +34,7 @@
     "react-native": "0.73.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^5.0.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^4.12.6",
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "4.8.2",
@@ -42,7 +43,6 @@
     "react-native-svg-transformer": "^1.3.0",
     "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-voice": "^0.3.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.0.4",
     "redux-persist": "^6.0.0",
