--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # EXPO_PUBLIC_API_URL=http://localhost:3200
-EXPO_PUBLIC_API_URL=https://afmtb.radahmedia.com/api
+EXPO_PUBLIC_API_URL=https://afmtb.radahmedia.com
